// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enroll Profile Update Transformer Tests should add title button and input elements from remediation with at least one required field 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.profile.additional.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "Another field",
        "options": {
          "inputMeta": {
            "name": "userProfile.anotherField",
            "required": true,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "enroll.choices.submit.finish",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Profile Update Transformer Tests should add title button and input elements from remediation with at least one required field and secondEmail field 1`] = `
{
  "data": {
    "userProfile.secondEmail": "",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.profile.additional.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "Secondary email",
        "options": {
          "inputMeta": {
            "name": "userProfile.secondEmail",
            "required": true,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "enroll.choices.submit.finish",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Profile Update Transformer Tests should add title, button and input elements from remediation with all optional fields when skip is missing from remediation 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.profile.additional.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "enroll.choices.submit.finish",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Profile Update Transformer Tests should add title, button, skip link and input elements from remediation with all optional fields 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.profile.additional.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "required": false,
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "enroll.choices.submit.finish",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "isActionStep": false,
          "label": "oie.enroll.skip.profile",
          "step": "skip",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
